fix alignment of map-with-route-from-a-to-b-using-public-transport

--- a/map-with-route-from-a-to-b-using-public-transport/demo.css
+++ b/map-with-route-from-a-to-b-using-public-transport/demo.css
@@ -1,11 +1,33 @@
 
-#map {
-    width: 95%;
+
+#map-with-route #map {
+    display: inline-block;
+    width: 45%;
     height: 450px;
     background: grey;
 }
 
-#panel {
-    width: 100%;
-    height: 400px;
+#map-with-route #panel {
+    display: inline-block;
+    width: 45%;
+    min-height: 450px;
+    max-height: 450px;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
+
+@media (max-width: 1024px ) {
+    #map-with-route #map {
+        display: block;
+        width: 95%;
+        margin-bottom: 3px;
+    }
+    
+    #map-with-route #panel {
+        display: block;
+        width: 95%;
+        margin-bottom: 3px;
+    }
 }
